Normal map handling regression in 2.78c BI #51746

Closed
opened 2017-06-08 13:04:27 +02:00 by Serge Lyatin · 6 comments

System Information
Win7 64bit

Blender Version
Broken: 2.78c
Worked: 2.77a

Short description of error

Normal map in both versions utilises Generated cube mapping.

2.77: Normal map provides this result without adding UV map (well, not the best but good enough)
normal_map_2.77a.png

2.78c (020bbbb): Normal map is not working without creating UVmap (pic1), but if you add UVmap through the plus button it appears rotated(pic2).
normal_map_2.78с_noUV.png
normal_map_2.78с.png

All is fine with properly made UV unwrapping (default Cube projection)
normal_map_2.78с_properUV.png

Exact steps for others to reproduce the error

  1. Open file in 2.78c, render viewport -> no map
  2. Push plus sign to add UVmap -> strange map
  3. Unwrap in edit mode with Cube projection -> working OK
    normal_map_bug.blend
**System Information** Win7 64bit **Blender Version** Broken: 2.78c Worked: 2.77a **Short description of error** Normal map in both versions utilises Generated cube mapping. **2.77:** Normal map provides this result without adding UV map (well, not the best but good enough) ![normal_map_2.77a.png](https://archive.blender.org/developer/F625302/normal_map_2.77a.png) **2.78c** (020bbbb): Normal map is not working without creating UVmap (pic1), but if you add UVmap through the plus button it appears rotated(pic2). ![normal_map_2.78с_noUV.png](https://archive.blender.org/developer/F625310/normal_map_2.78с_noUV.png) ![normal_map_2.78с.png](https://archive.blender.org/developer/F625312/normal_map_2.78с.png) All is fine with properly made UV unwrapping (default Cube projection) ![normal_map_2.78с_properUV.png](https://archive.blender.org/developer/F625314/normal_map_2.78с_properUV.png) **Exact steps for others to reproduce the error** 1. Open file in 2.78c, render viewport -> no map 2. Push *plus sign* to add UVmap -> strange map 3. Unwrap in edit mode with Cube projection -> working OK [normal_map_bug.blend](https://archive.blender.org/developer/F625321/normal_map_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscribers: @AlexanderRomanov, @Sergey

Added subscribers: @AlexanderRomanov, @Sergey
Alexander Romanov was assigned by Sergey Sharybin 2017-06-09 10:38:19 +02:00

The issue is caused by 5abae51. Assigning to @AlexanderRomanov for further investigation.

The issue is caused by 5abae51. Assigning to @AlexanderRomanov for further investigation.

This issue was referenced by e3e5ecfaa8

This issue was referenced by e3e5ecfaa84e2ad37d56210f40b395007ae61651

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51746
There is no content yet.